public interface Flatbed {
    public boolean isUp();
    public void raise();
    public void lower();
}